# squid-captcha

./: Dockerfile  README.md  app.py  app.spec  pyproject.toml  requirements.txt
make_captcha/: generate.py  math.py
static/: simple.css
templates/: base.html  secret.html
